# yRPC

./: .gitignore  Cargo.toml  DevNotes.md  README.md  expanded_code.rs
examples/: callee.rs  callee_use_marco.rs  callee_v2.rs  caller.rs  caller_v2.rs  protocol.rs
rpc_macros/: Cargo.toml
rpc_macros/src/: lib.rs
rpc_marcos/: Cargo.toml
rpc_marcos/src/: lib.rs
src/: lib.rs  rpc_application.rs  rpc_channel.rs  rpc_protocol.rs  rpc_provider.rs
tests/: marco_test.rs
utils/: callee.rs
