[package]
name = "rpc_framework"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpc_framework"
path = "src/lib.rs"

[[bin]]
name = "callee"
path = "examples/callee_use_marco.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0.129"                                
tokio = { version = "1", features = ["full"] }   

rpc_macros = { path = "./rpc_macros" }