[package]
name = "rpc_framework"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpc_framework"
path = "src/lib.rs"

[[bin]]
name = "callee"
path = "examples/callee_v2.rs"

[[bin]]
name = "caller"
path = "examples/caller.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }  
serde_json = { version = "1.0.132"}                                  
tokio = { version = "1", features = ["full"] }   
uuid = { version = "1.0.0", features = ["v4","fast-rng"]}


yrpc = { path = "./rpc_marcos" }